@@ -1,6 +1,7 @@
 Amongst other, the following people contributed to ant:
 
 Adam Blinkinsop
+Adam Bryzak
 Aleksandr Ishutin
 Alexey Panchenko
 Alexey Solofnenko
