@@ -35,6 +35,10 @@
     <last>Blinkinsop</last>
   </name>
   <name>
+    <first>Adam</first>
+    <last>Bryzak</last>
+  </name>
+  <name>
     <first>Aleksandr</first>
     <last>Ishutin</last>
   </name>
